<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:fillViewport="true"
    tools:context=".activities.EditProfile">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp">

    </com.makeramen.roundedimageview.RoundedImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/baseline_power_settings_new_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile">

    </TextView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent">


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="800dp"

                android:layout_marginBottom="1232dp"
                android:background="@drawable/background_content_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageBackMain"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_36sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/background_icon"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_back"
                    android:tint="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.AppCompatImageView>




                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageProfileUpdate"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_115sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/background_image"
                    android:scaleType="centerCrop"
                    app:riv_oval="true">

                </com.makeramen.roundedimageview.RoundedImageView>

                <TextView
                    android:id="@+id/textAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_116sdp"
                    android:layout_marginTop="@dimen/_47sdp"
                    android:text="@string/fotograf_ekleyiniz"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp">

                </TextView>

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_120sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/isim"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_160sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/girisYili"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_200sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/girsi_yili"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/mezunYili"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_240sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/mezun_yili"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/telefon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_280sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/telefon_numarasi"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/is_bilgi"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_325sdp"
                    android:hint="@string/guncel_is_bilgileri"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ülke"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_350sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/ulke"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/sehir"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_390sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/sehir"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/firma"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_430sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/firma"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/egitim_bilgi"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_470sdp"
                    android:hint="@string/egitim_bilgileri"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chk1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_490sdp"
                    android:checked="false"
                    android:onClick="onCheckBoxClick"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/lisans"
                    android:textSize="@dimen/_14ssp" />

                <CheckBox
                    android:id="@+id/chk2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_490sdp"
                    android:checked="false"
                    android:onClick="onCheckBoxClick"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/yuksek_lisans"
                    android:textSize="@dimen/_14ssp" />

                <CheckBox
                    android:id="@+id/chk3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_210sdp"
                    android:layout_marginTop="@dimen/_490sdp"
                    android:checked="false"
                    android:onClick="onCheckBoxClick"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/doktora"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/sosyal_medya"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_525sdp"
                    android:hint="@string/sosyal_medya_hesabi"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sosyal_medya_hesap"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_550sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/sosyal_medya_hesap_linki"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_575sdp"
                    android:text="@string/guncelle"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>