<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:fillViewport="true"
    tools:context=".activities.MainActivity">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp">

    </com.makeramen.roundedimageview.RoundedImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/baseline_power_settings_new_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile">

    </TextView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent">


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="400dp"
                android:layout_height="700dp"

                android:layout_marginBottom="4648dp"
                android:background="@drawable/background_content_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profilBtn"
                    android:layout_width="255dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:text="@string/profil_sayfam"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profilEditBtn"
                    android:layout_width="255dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_120sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:text="@string/profil_duzenle"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newsBtn"
                    android:layout_width="255dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_160sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:text="DUYURULAR"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/passBtn"
                    android:layout_width="255dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_200sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:text="Parola Değiştir"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />





            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</androidx.constraintlayout.widget.ConstraintLayout>